# moveit_scout

load_octomap/: 0325_1422.bt
load_octomap/launch/: load_octomap.launch
load_octomap/src/: octoload.py
scout_config/: .setup_assistant  .setup_assistant:Zone.Identifier  CMakeLists.txt  package.xml
scout_config/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  scout_mini.srdf
scout_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  scout_mini_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  set_goal_pose.launch  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
scout_config/src/: SetGoalpose.cpp  trajectory_to_cmd_vel.cpp
